# biblemate2

./: CMakeLists.txt  README.md  book.cpp  book.h  dbhelper.cpp  dbhelper.h  listviewdelegate.cpp  listviewdelegate.h  listviewdelegate_2.cpp  listviewdelegate_2.h  listviewdelegate_4.cpp  listviewdelegate_4.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  note.cpp  note.h  resources.qrc  verse.cpp  verse.h
languages/: biblemate2_it_IT.ts
